--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,13 @@
     "@tailwindcss/vite": "^4.0.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.475.0",
+    "perfect-cursors": "^1.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-use-websocket": "^4.13.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
